--- a/web/src/views/html/Map.html
+++ b/web/src/views/html/Map.html
@@ -17,5 +17,29 @@
       </div>
     </div>
   </div>
+  <div>
+    <div class="container text-center">
+      <div class="row align-items-center">
+        <div class="col">
+          <img width="400 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship9-115.svg" alt="Aircraft Carrier" class="img-fluid">
+        </div>
+        <div class="col">
+          <img width="120 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship4-475.svg" alt="Battleship" class="img-fluid">
+        </div>
+        <div class="col">
+          <img width="120 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship1-35.svg" alt="Cruiser" class="img-fluid">
+        </div>
+        <div class="col">
+          <img width="120 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship1-35.svg" alt="Cruiser" class="img-fluid">
+        </div>
+        <div class="col">
+          <img width="120 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship5-submarine.svg" alt="Submarine" class="img-fluid">
+        </div>
+        <div class="col">
+          <img width="120 px" src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/ships/svg/ships-military-v1.0/ship5-submarine.svg" alt="Submarine" class="img-fluid">
+        </div>
+      </div>
+    </div>
+  </div>
   <script defer src="../controllers/Map.controller.js"></script>
   
