SideBar for index

--- a/web/src/views/html/Loser.html
+++ b/web/src/views/html/Loser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game Result</title>
-    <link rel="stylesheet" href="../css/Winner.css" />
+    <link rel="stylesheet" href="../../assets/css/Winner.css" />
   </head>
   <body>
     <div class="popup-overlay">
@@ -21,6 +21,6 @@
         </div>
       </div>
     </div>
-    <script src="../js/Loser.js"></script>
+    <script src="../../controllers/Winner.controller.js"></script>
   </body>
 </html>
