--- a/web/src/views/html/Home.html
+++ b/web/src/views/html/Home.html
@@ -13,57 +13,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!--hoja de estilos del home-->
-    <link rel="stylesheet" href="../css/Home.css">
+    <link rel="stylesheet" href="../../assets/css/Home.css">
 </head>
 <body>
     <div class="container-fluid p-0">
         <div class="row flex-nowrap">
-            <!-- Sidebar (barra lateral del menú)-->
-            <div class="sidebar col-auto bg-light sticky-top">
-                <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top h-100">
-                    <a href="/" class="d-block p-3 link-dark text-decoration-none" title="Inicio" data-bs-toggle="tooltip" data-bs-placement="right">
-                        <i class="bi-bootstrap fs-1"></i>
-                    </a>
-                    <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link py-3 px-2" title="Inicio" data-bs-toggle="tooltip" data-bs-placement="right">
-                                <i class="bi-house fs-1"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link py-3 px-2" title="Dashboard" data-bs-toggle="tooltip" data-bs-placement="right">
-                                <i class="bi-speedometer2 fs-1"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link py-3 px-2" title="Tablas" data-bs-toggle="tooltip" data-bs-placement="right">
-                                <i class="bi-table fs-1"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link py-3 px-2" title="Favoritos" data-bs-toggle="tooltip" data-bs-placement="right">
-                                <i class="bi-heart fs-1"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link py-3 px-2" title="Usuarios" data-bs-toggle="tooltip" data-bs-placement="right">
-                                <i class="bi-people fs-1"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="dropdown">
-                        <a href="#" class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle" id="dropdownUser3" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="bi-person-circle h2"></i>
-                        </a>
-                        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser3">
-                            <li><a class="dropdown-item" href="#">Nuevo proyecto</a></li>
-                            <li><a class="dropdown-item" href="#">Configuración</a></li>
-                            <li><a class="dropdown-item" href="#">Perfil</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            
+          
             <!-- main del home -->
             <div class="main-content">
                 <!-- contenedor de descripción del juego -->
@@ -175,6 +130,6 @@
 
     <!-- Cargar Bootstrap JS y el js de la página -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/Home.js"></script>
+    <script src="../../controllers/Home.controller.js"></script>
 </body>
 </html>
