--- a/web/src/views/index.html
+++ b/web/src/views/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <!-- framework de bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- íconos de bootstrap para sidebar -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
+    />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Sidebar (barra lateral del menú) -->
+        <div class="col-auto bg-light sticky-top min-vh-100 sidebar">
+          <div
+            class="d-flex flex-column align-items-center justify-content-between h-100"
+          >
+            <a
+              href="/"
+              class="d-block p-3 link-dark text-decoration-none"
+              title="Inicio"
+              data-bs-toggle="tooltip"
+              data-bs-placement="right"
+            >
+              <i class="bi-bootstrap fs-1"></i>
+            </a>
+            <ul
+              class="nav nav-pills nav-flush flex-column mb-auto text-center align-items-center"
+            >
+              <li class="nav-item">
+                <a
+                  href="#"
+                  class="nav-link py-3 px-2"
+                  title="Inicio"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                >
+                  <i class="bi-house fs-1"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="nav-link py-3 px-2"
+                  title="Dashboard"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                >
+                  <i class="bi-speedometer2 fs-1"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="nav-link py-3 px-2"
+                  title="Tablas"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                >
+                  <i class="bi-table fs-1"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="nav-link py-3 px-2"
+                  title="Favoritos"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                >
+                  <i class="bi-heart fs-1"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="nav-link py-3 px-2"
+                  title="Usuarios"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                >
+                  <i class="bi-people fs-1"></i>
+                </a>
+              </li>
+            </ul>
+            <div class="dropdown pb-3">
+              <a
+                href="#"
+                class="d-flex align-items-center justify-content-center p-3 link-dark text-decoration-none dropdown-toggle"
+                id="dropdownUser3"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="bi-person-circle h2"></i>
+              </a>
+              <ul
+                class="dropdown-menu text-small shadow"
+                aria-labelledby="dropdownUser3"
+              >
+                <li><a class="dropdown-item" href="#">Nuevo proyecto</a></li>
+                <li><a class="dropdown-item" href="#">Configuración</a></li>
+                <li><a class="dropdown-item" href="#">Perfil</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- main -->
+        <div class="col p-4">
+          <h1></h1>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- script de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
