--- a/web/src/assets/css/styles.css
+++ b/web/src/assets/css/styles.css
@@ -23,3 +23,20 @@
   right: 150px;
 }
 
+/* diagonal footer effect */
+.diagonal-footer {
+  clip-path: polygon(20px 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+/* text in footer */
+.footer-text {
+  text-align: right;         
+  font-family: 'Courier New', monospace;  
+  font-size: 1.5rem;         
+  color: white;              
+  letter-spacing: 3px;       
+  margin-right: 40px;        
+  font-weight: bold;
+}
+
+
