--- a/web/src/views/index.html
+++ b/web/src/views/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
   <body>
     <div class="container-fluid">
@@ -123,5 +124,16 @@
 
     <!-- script de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- footer with game´s name -->
+    <footer class="fixed-bottom">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-6 bg-dark ms-auto diagonal-footer">
+            <p class="footer-text mb-0 py-3">NAVAL BATTLE WITH AI © 2025</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
