--- a/web/src/assets/css/map.css
+++ b/web/src/assets/css/map.css
@@ -1,6 +1,4 @@
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f8ff;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -9,6 +7,7 @@ body {
 
 h1 {
   margin-top: 20px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 .boards {
