Update styles.css, fix some measures

--- a/web/src/assets/css/styles.css
+++ b/web/src/assets/css/styles.css
@@ -15,11 +15,60 @@
 }
 /* Vertical separator */
 .vl {
-  height: 40px;
-  width: 1px;
-  border-left: 1px solid rgba(0, 0, 0, 0.336);
   position: absolute;
-  display: inline;
-  right: 150px;
+  /* display: inline; */
 }
 
+.climate-card-wrapper {
+  max-width: 500px; /* Ajusta este valor según lo necesites */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.climate-icon {
+  max-width: 60px; /* Ajusta este valor según lo necesites */
+  height: auto;
+}
+.sidebar {
+  height: 160px;
+  width: 50px;
+  top: 25vh;
+  background-color: #27364294;
+  box-shadow: 1px 1px 5px black;
+  z-index: 1070;
+}
+
+.play {
+  color: #946b2d;
+}
+
+.person-circle {
+  color: white !important;
+}
+
+.dropdown {
+  z-index: 9999;
+}
+
+.dropdown-menu {
+  z-index: 9999; /* Asegurémonos de que también tenga un z-index alto */
+}
+
+.loading_map {
+  aspect-ratio: 1;
+  width: 300px;
+  background-color: #946b2d;
+  color: white;
+  font-size: x-large;
+  font-weight: 900;
+}
+
+/* Media query para dispositivos con un ancho máximo de 400px (similar al de la imagen) */
+@media (max-width: 416px) {
+  .container-climate {
+    padding-left: 90px !important;
+  }
+  .climate-card-wrapper {
+    max-width: 200px; /* Ancho más pequeño para dispositivos móviles pequeños */
+  }
+}
