--- a/web/src/assets/css/map.css
+++ b/web/src/assets/css/map.css
@@ -3,11 +3,12 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #ffffff;
 }
 
 h1 {
-  margin-top: 20px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .boards {
@@ -30,8 +31,8 @@ h1 {
 /* Estilos base para celdas */
 .cell {
   aspect-ratio: 1;
-  background-color: #87cefa;
-  border: 1px solid #333;
+  background-color: #87cefa2d;
+  border: 1px solid #ffffff;
   cursor: pointer;
   user-select: none;
   display: flex;
