--- a/web/src/views/html/User.html
+++ b/web/src/views/html/User.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tutosrive/legendary-guacamole@main/css/from-prog2/v2/styles-v1.1.css" />
 <form class="form-user">
   <fieldset>
     <div id="row-container-user" class="row row-cols-xxl-3 row-cols-xl-3 row-cols-lg-3 row-cols-md-2 row-cols-sm-1 row-cols-1 mx-1 my-0">
