--- a/web/src/views/html/Map.html
+++ b/web/src/views/html/Map.html
@@ -11,7 +11,7 @@
     <div class="col">
       <div class="text-center mt-3"><h2>Player</h2></div>
       <div class="board-container text-center overflow-scroll">
-        <div id="player-board" class="board"><div class="loading_map d-flex align-items-center justify-content-center">Loading...</div></div>
+        <div id="player-board" class="board justify-content-center"><div class="loading_map d-flex align-items-center justify-content-center">Loading...</div></div>
       </div>
     </div>
     <div class="col">
@@ -26,7 +26,7 @@
             <div id="ai-message-toast-body" class="toast-body"></div>
           </div>
         </div>
-        <div id="machine-board" class="board"><div class="loading_map d-flex align-items-center justify-content-center">Loading...</div></div>
+        <div id="machine-board" class="board justify-content-center"><div class="loading_map d-flex align-items-center justify-content-center">Loading...</div></div>
       </div>
     </div>
   </div>
@@ -54,5 +54,5 @@
       </div>
     </div>
   </div>
-  <!-- <script defer src="../controllers/Map.controller.js"></script> -->
+  <script defer src="../controllers/Map.controller.js"></script>
 </div>
