--- a/web/src/views/html/Winner.html
+++ b/web/src/views/html/Winner.html
@@ -16,6 +16,7 @@
           <p class="popup-message" id="msg-end-game"></p>
         </div>
         <div class="popup-footer">
+          <button class="popup-button reload-game">Again</button>
           <button class="popup-button exit-game">Exit</button>
         </div>
       </div>
