--- a/web/src/views/index.html
+++ b/web/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/logo.png" type="image/x-icon" />
     <script type="module" src="../controllers/index.controller.js"></script>
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/css/Footer.css" />
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </head>
-  <body data-bs-theme="light">
+  <body data-bs-theme="dark">
     <div id="climate-container" class="container-climate position-absolute top-0 end-0 mt-2 me-3"></div>
     <!-- sidebar -->
     <div class="position-fixed p-4 rounded-4 ms-2 sidebar d-none d-md-block">
@@ -43,7 +43,7 @@
     <!-- Top Sidebar -->
     <div class="d-md-none sticky-top p-2 w-25">
       <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle w-100" type="button" id="sidebarDropdown" data-bs-toggle="dropdown" aria-expanded="false">Menu</button>
+        <button class="btn menu-dropdown dropdown-toggle w-100" type="button" id="sidebarDropdown" data-bs-toggle="dropdown" aria-expanded="false">Menu</button>
         <ul class="dropdown-menu w-25" aria-labelledby="sidebarDropdown">
           <li>
             <a class="dropdown-item" href="#home"> <i class="bi-house fs-5 me-2"></i> Inicio </a>
@@ -55,12 +55,14 @@
       </div>
     </div>
     <div class="mx-auto d-block p-2 col-11 mb-3" id="main"></div>
-    <!-- Footer -->
-    <footer class="custom-footer d-flex align-items-center justify-content-start px-3 justify-content-center">
-      <img src="https://i.postimg.cc/C5RXT0YK/Gemini-Generated-Image-go8jhdgo8jhdgo8j.jpg" alt="Logo" class="footer-logo me-3" />
-      <h5 class="footer-title mb-0">
-        NAVAL <span class="smaller">WITH</span> BATTLE WITH A<span class="footer-r">I<sup>®</sup></span>
-      </h5>
-    </footer>
+    <div class="row">
+      <!-- Footer -->
+      <footer class="col-12 col-lg-4 col-md-5 col-sm-6 custom-footer d-flex align-items-center px-3 justify-content-center">
+        <img src="https://cdn.jsdelivr.net/gh/tutosrive/images-projects-srm-trg@main/NBAI/logo.png" alt="Logo" class="footer-logo me-3" />
+        <p class="footer-title mb-0">
+          NAVAL BATTLE<span class="smaller"></span> WITH A<span class="footer-r">I<sup>®</sup></span>
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
