--- a/web/src/assets/css/map.css
+++ b/web/src/assets/css/map.css
@@ -79,7 +79,7 @@ h1 {
 
 /* Machine, uncomment to debug */
 #machine-board .ship {
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 button {
